config value was not used